# ubuntu-y700-build-ci

./: README.md
.github/workflows/: build-rootfs-and-grub.yml
scripts/ci/: apply-workflow-config.sh  build-grub-image.sh  build-rootfs-image.sh  build-tb321fu-haptics-deb.sh  common.sh  pack-disk-image.sh
source/tb321fu-ksystemstats-adreno-freq/: CMakeLists.txt  metadata.json  tb321fu_gpu.cpp
